<?xml version="1.0"?>
<package format="2">
  <name>camera_lidar_filter</name>
  <version>0.0.1</version>
  <description>Camera lidar tools</description>

  <!-- One maintainer tag requiremd, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rouceto1@fel.cvut.cz">Tomas Roucek</maintainer>

<license>MIT</license>
  <author email="rouceto1@fel.cvut.cz">Tomas Roucek</author> 


  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>grid_map</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msg</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msg</exec_depend>
  <depend>eigen3</depend>
  <depend> sensor_msgs</depend>
  <depend> std_msgs</depend>
  <depend> pcl_ros</depend>
  <depend> pcl_conversions</depend>
  <depend> geometry_msgs</depend>
  <depend> nav_msgs</depend>
  <depend>filters</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
